Landing Page Dark Mode issue solvedd

--- a/src/components/Testimonial2/testimonial.module.css
+++ b/src/components/Testimonial2/testimonial.module.css
@@ -1,4 +1,4 @@
 .leftCourosal{
-    right: 4rem !important;
+    right: 6rem !important;
     left: auto !important;
 }
